<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity"
    android:orientation="vertical"
    >

       <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/whats_your_name"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:id="@+id/text1"

        />

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    >

    <ImageView
        android:src="@drawable/cup_coffee"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RESET"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:textSize="24sp"
            android:id="@+id/text2"
            android:onClick="reset"

            />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/quantity_text_view"
            android:onClick="minusQuantity"
            android:src="@drawable/previous"
            android:text="+" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:id="@+id/quantity_text_view"
        />
        <ImageButton
         android:src="@drawable/nextv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="-"
        android:layout_toRightOf="@id/quantity_text_view"
        android:onClick="plusQuantity"
        />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/Order_Summary"
        android:layout_above="@id/order_summary_text_view"
        android:textAllCaps="true"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@android:color/black"
        android:id="@+id/textView" />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/DA"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:id="@+id/order_summary_text_view"
        android:textStyle="bold"
        />

        <ImageButton
            android:src="@drawable/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView"
            android:scaleType="centerCrop" />

        <CheckBox
            android:id="@+id/check_creem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text2"
            android:paddingLeft="12dp"
            android:text="@string/wipped_Cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_choclate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/check_creem"
            android:paddingLeft="12dp"
            android:text="@string/choclate"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>
